# macrocast

./: CLAUDE.md  README.md  pyproject.toml
configs/: spec.yaml
notebooks/: run_eval.ipynb  test_data_transformer.ipynb
scripts/: generate_forecasts.py  run_backtest.py  train_model.py
src/: __init__.py  config.py  eval.py  evaluate.py  ingest.py  load_data.py  model.py  transform.py  utils.py
