[project]
name = "macrocast"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pymc>=5.27.1",
    "pymc-bart>=0.11.0",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0.0",
    "arviz>=0.21.0",
    "scikit-learn>=1.6.0",
    "yml>=0.0.1",
]
